# camfort-analyse

./: camfort-analyse.cabal
eval/: Analyse.hs  files.sh  infer.sh  inferRaw.sh
