name:                camfort-analyse
version:             0.1.0.0
synopsis:            Evaluation code for CamFort
description:         Evaluation code for CamFort
homepage:            https://github.com/camfort/camfort-analyse
license:             Apache-2.0
license-file:        LICENSE
author:              Matthew Danish
maintainer:          mrd45@cam.ac.uk
copyright:           2016 University of Cambridge
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/camfort/camfort-analyse

executable camfort-analyse
  main-is:             Analyse.hs
  build-depends:       base >=4.9 && <4.10,
                       array >= 0.5.1,
                       bytestring >= 0.10,
                       containers >= 0.5.0.0,
                       regex-base >= 0.93.2,
                       regex-pcre >= 0.94.4
  hs-source-dirs:      eval
  default-language:    Haskell2010
